--- a/projects/assign2/src/main/resources/application/HomeScreen.fxml
+++ b/projects/assign2/src/main/resources/application/HomeScreen.fxml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="application.Controllers.HomeScreenController">
+      fx:controller="application.Controllers.HomeScreenController"
+      stylesheets="@Home.css">
 
-    <TableView fx:id="bookTableView">
-        <columns>
-            <TableColumn fx:id="titleColumn" text="Title" prefWidth="150">
-                <cellValueFactory>
-                    <PropertyValueFactory property="title" />
-                </cellValueFactory>
-            </TableColumn>
-            <TableColumn fx:id="authorColumn" text="Author" prefWidth="150">
-                <cellValueFactory>
-                    <PropertyValueFactory property="author" />
-                </cellValueFactory>
-            </TableColumn>
-        </columns>
-    </TableView>
+    <HBox spacing="10">
 
-    <Button fx:id="borrowButton" text="Borrow" onAction="#borrowBook" />
+        <!-- Left Side - Input Fields in List Form and Buttons -->
+        <VBox spacing="10">
+            <!-- User ID Field -->
+            <TextField fx:id="userIdField" promptText="User ID" styleClass="text-field"/>
+            <!-- Lend Date Field -->
+            <TextField fx:id="lendDateField" promptText="Lend Date (YYYY-MM-DD)" styleClass="text-field"/>
+            <!-- Borrow and Return Buttons -->
+            <HBox spacing="10" styleClass="hbox">
+                <Button fx:id="borrowButton" text="Borrow Book" onAction="#borrowBook" styleClass="button"/>
+                <Button fx:id="returnButton" text="Return Book" onAction="#returnBook" styleClass="button"/>
+            </HBox>
+        </VBox>
+
+        <!-- Right Side - Table View -->
+        <TableView fx:id="bookTableView" VBox.vgrow="ALWAYS" prefWidth="300" styleClass="table-view">
+            <columns>
+                <TableColumn fx:id="titleColumn" text="Title" prefWidth="150">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="title" />
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="authorColumn" text="Author" prefWidth="150">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="author" />
+                    </cellValueFactory>
+                </TableColumn>
+            </columns>
+        </TableView>
+    </HBox>
 
 </VBox>
